Started to structure project

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ UnityProject/TacoTuesday.Plugins.csproj
 UnityProject/TacoTuesday.sln
 UnityProject/UnityProject.csproj
 UnityProject/UnityProject.sln
+UnityProject/Builds/
