Add new card data

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ UnityProject/TacoTuesday.sln
 UnityProject/UnityProject.csproj
 UnityProject/UnityProject.sln
 UnityProject/Builds/
+UnityProject/UnityProject.Editor.csproj
