--- a/UnityProject/UnityProject.Editor.csproj
+++ b/UnityProject/UnityProject.Editor.csproj
@@ -55,9 +55,6 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor.Advertisements">
       <HintPath>Library\UnityAssemblies\UnityEditor.Advertisements.dll</HintPath>
     </Reference>
@@ -99,9 +96,6 @@
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.VR">
       <HintPath>Library\UnityAssemblies\UnityEditor.VR.dll</HintPath>
@@ -145,6 +139,9 @@
     <Reference Include="UnityEditor.iOS.Extensions.Common">
       <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
     </Reference>
+    <Reference Include="TexturePackerImporter">
+      <HintPath>Assets\ThirdParty\codeandweb.com\Editor\TexturePackerImporter.dll</HintPath>
+    </Reference>
     <Reference Include="DOTween">
       <HintPath>Assets\ThirdParty\DOTween\DOTween.dll</HintPath>
     </Reference>
@@ -171,6 +168,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Src\Editor\CreateCardResourceBank.cs" />
     <Compile Include="Assets\Src\Editor\CreateFontBank.cs" />
     <Compile Include="Assets\Src\Editor\ScriptableObjectUtility.cs" />
   </ItemGroup>
@@ -186,6 +184,8 @@
     <None Include="Assets\ThirdParty\JsonDotNet\Assemblies\Standalone\Newtonsoft.Json.XML" />
     <None Include="Assets\ThirdParty\JsonDotNet\Assemblies\Windows\Newtonsoft.Json.XML" />
     <None Include="Assets\ThirdParty\JsonDotNet\link.xml" />
+    <None Include="Assets\ThirdParty\codeandweb.com\Editor\SettingsTexturePackerImporter.txt" />
+    <None Include="Assets\ThirdParty\codeandweb.com\Readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
