--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ UnityProject/Builds/
 UnityProject/UnityProject.Editor.csproj
 UnityProject/UnityProject.Plugins.csproj
 UnityProject/UnityProject.VC.db
+UnityProject/Assets/Glyph Report.txt
+UnityProject/Assets/Glyph Report.txt.meta
